# privment

./: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
client/rust/: Cargo.toml
client/rust/src/: main.rs
programs/privment/: Cargo.toml
programs/privment/src/: example.rs  lib.rs
programs/privment/src/instructions/: init_invoice.rs  invoice.rs  mod.rs  pay.rs  register.rs
programs/privment/src/state/: invoice_account.rs  mod.rs  receipt_account.rs  register_account.rs
tests/: README.md  pivment.ts
web/: next.config.ts  package.json
web/public/idl/: privment.json
web/src/: middleware.ts
web/src/app/: ClientLayout.tsx  globals.css  home.tsx  layout.tsx  page.tsx
web/src/app/auth/callback/: page.tsx  route.ts
web/src/app/auth/signout/: route.ts
web/src/app/home/: page.tsx
web/src/app/login/: actions.ts  page.tsx
web/src/app/private/: page.tsx
web/src/app/profile/: page.tsx
web/src/components/: LoginButton.tsx  NavBar.tsx  Private.tsx  SessionProvider.tsx
web/src/components/auth/: LoginForm.tsx
web/src/contexts/: WalletContext.tsx
web/src/lib/: anchorClient.ts  sendWithExternalWallet.ts
web/src/lib/auth/: actions.ts
web/src/lib/supabase/: server.ts
web/src/utils/: SigninMessage.tsx
web/src/utils/supabase/: server.ts
