[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.31.0", features = ["metadata"]}
# Solana SDK + Client (use the latest version matching your local validator / Anchor)
solana-sdk = "2.2.2"
solana-client = "2.2.7"

# SPL Token Client (Token-2022 support included)
spl-token-client = "0.15.0"
spl-token-2022 = {version = "8.0.1", features = ["no-entrypoint"] }
# Async support
tokio = { version = "1", features = ["full"] }
