[package]
name = "privment"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privment"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.31.0", features = ["metadata"]}
spl-token-client = "0.15.0"
spl-token-2022 = {version = "8.0.1", features = ["no-entrypoint"] }
solana-program = ">=2.2.1"
solana-sdk = ">=2.2.1"
solana-client = ">=2.2.1"